created movie tracker app using vite

--- a/FullStack/Frontend/projects/calculator-app/src/App.css
+++ b/FullStack/Frontend/projects/calculator-app/src/App.css
@@ -1,54 +1,74 @@
-.App{
+.App {
   display:flex;
+  animation: gradientAnimation 8s infinite alternate;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height:100vh;
-  background-color: aquamarine;
-  color:#333;
-
-  
+  height: 100vh;
+  background: linear-gradient(135deg, rgb(95, 232, 186), rgb(124, 231, 231), aqua);
 }
-.header-container{
+
+.popup-input,.result-box{
+  display: flex;
+  flex-direction: column;
+  width:300px;
+  height: 60px;
+  background-color: black;
+  color: white;
+  font-size: 32px;
+  margin:20px ;
+  font-weight: bold;
+  border-radius: 6px;
+  text-align: center;
+  justify-content: center;
+
+}
+
+
+.header-container {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 20px; 
 }
-.calculator{
+
+
+.calculator {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 10px; 
   padding: 20px;
   background-color: aqua;
-  border-radius: 7px;
-  box-shadow:0 4px 10px rgba(0, 0, 0, 0.1);
-  justify-content: center; ;
-  border: solid 0.25px black;
- 
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  border: 0.25px sloid black;
 }
+
+/* Style for buttons */
 button {
-  width: 70px;
-  height: 70px;
-  font-size: 40px;
-  color:black;
+  width: 60px;
+  height: 60px;
+  font-size: 25px;
   font-weight: bold;
-  border: none;
   background-color: aqua;
-  border: solid 0.25px lightgray;
   border-radius: 4px;
   cursor: pointer;
   transition: 0.2s;
+  border: 0.25px sloid rgb(212, 203, 203);
 }
-h1{
-  font-size:2 rem ;
-  margin-bottom: 20px;
-}
+
+
 .operator{
-  background-color: burlywood;
+  background-color: rgb(212, 162, 145);
 }
 .operatornull{
-  background-color: burlywood;
-  background-color: aqua;
   border: none;
+  cursor:auto;
   
 }
+button:hover {
+  background-color: #ebe0e0;
+}
+
+
+
